src/assets/scss/blocks/_nav.scss
@use '../base/vars';

.nav {
	&__list {
		display: grid;
		justify-content: start;
	}

	&__list[data-parent='header'] {
		--icon-min-size: 4.75rem;
		--gap: 0.75rem;
		grid-template-columns: auto auto;
		gap: var(--gap);
	}

	.header &__link,
	.settings &__link {
		display: grid;
		justify-content: center;
		justify-items: center;
		text-align: center;
		gap: 0.25rem;
		color: #fff;
	}

	&__link {
		pointer-events: all;
	}

	&__link[aria-hidden] {
		opacity: 1;
	}

	&__link[data-draggable] {
		position: absolute;
		inset: 0;
		opacity: 1;
		user-select: none;
	}

	&__link[data-draggable]:focus-visible {
		opacity: 1;
	}

	&__link.on-drag {
		opacity: 0.6;
	}

	.header &__link--name,
	.settings &__link--name {
		padding: 0 0.25ch;
		background-color: rgba(0, 0, 0, 0.45);
		line-height: 1;
	}

	&__item {
		position: relative;
		user-select: none;
		pointer-events: none;
	}

	&__item img {
		user-select: none;
	}
}

@each $icon in vars.$icons {
	.nav__item[data-item='#{$icon}'] .nav__link {
		@media screen and (min-width: vars.$breakpoint-desktop) {
			transform: translate(
				var(--#{$icon}-position-x, 0),
				var(--#{$icon}-position-y, 0)
			);
		}
	}
}

